// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateField should handle pattern with g flag 1`] = `
Object {
  "test": Object {
    "message": "",
    "received": "a",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "minLength",
    "types": Object {
      "minLength": true,
      "validate": true,
    },
  },
}
`;

exports[`validateField should handle pattern with g flag 2`] = `
Object {
  "test": Object {
    "message": "",
    "received": "a",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "minLength",
    "types": Object {
      "minLength": true,
      "validate": true,
    },
  },
}
`;

exports[`validateField should return all validation error messages 1`] = `
Object {
  "test": Object {
    "message": "test",
    "received": "",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "required",
    "types": Object {
      "required": "test",
      "test": true,
      "test1": "Luo",
      "test2": "Bill",
    },
  },
}
`;

exports[`validateField should return all validation error messages 2`] = `
Object {
  "test": Object {
    "message": "minLength",
    "received": "bil",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "minLength",
    "types": Object {
      "minLength": "minLength",
      "pattern": "pattern",
      "test": true,
      "test1": "Luo",
      "test2": "Bill",
    },
  },
}
`;

exports[`validateField should return all validation error messages 3`] = `
Object {
  "test": Object {
    "message": "minLength",
    "received": "bil",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "minLength",
    "types": Object {
      "minLength": "minLength",
      "pattern": "pattern",
      "test": true,
      "test1": "Luo",
      "test2": "Bill",
    },
  },
}
`;

exports[`validateField should return all validation errors 1`] = `
Object {
  "test": Object {
    "message": "",
    "received": "",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "required",
    "types": Object {
      "required": true,
      "validate": true,
    },
  },
}
`;

exports[`validateField should return all validation errors 2`] = `
Object {
  "test": Object {
    "message": "",
    "received": "123",
    "ref": Object {
      "name": "test",
      "type": "text",
    },
    "type": "minLength",
    "types": Object {
      "minLength": true,
      "pattern": true,
      "validate": true,
    },
  },
}
`;
